--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <br/><h1>Blint - Homepage</h1>
 <br/>
 <div class="text-center">
-<img src="/assets/bot1_edited.png"/>
+<!-- <img src="/assets/bot1_edited.png"/> -->
 <div class="bot-notifications">
 	<%= session[:not] %>
 </div>
