--- a/app/views/requests/published_messages.html.erb
+++ b/app/views/requests/published_messages.html.erb
@@ -15,7 +15,7 @@
 						<a href="/profile/<%=s.receiver_id%>"><img src="<%=User.find(s.receiver_id).avatar.url%>" class="img-header"></a><br/>
 						<%=User.find(s.receiver_id).name%>
 					</td>
-					<td><br/><a href="/archived_message/<%=s.id%>"><%=s.title%></a></td>
+					<td><br/><a href="/published_message/<%=s.id%>"><%=s.title%></a></td>
 					<td><br/><%=s.created_at%></td>
 					
 				</tr>
