--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
     var client;
     $(function() {
       // Setting up a global Faye client
-      client = new Faye.Client("http://localhost:9292/faye");
+      client = new Faye.Client("http://#{ request.host }:9292/faye");
     });
     $(document).ready(function(){
       <% if current_user.present? %>
@@ -33,11 +33,11 @@
                         $("#indicator_"+v.id).html('offline');
                     }
                 });
-                setTimeout(keep_online, 5000);
+                setTimeout(keep_online, 10000);
             }
         });
       }
-      setTimeout(keep_online, 5000);
+      setTimeout(keep_online, 10000);
       <% end %>
     });
   </script>
@@ -77,7 +77,7 @@
             <div class="tm-message">
             <i class="fa fa-user-plus" style="font-size:26px;"></i> 
             <% if current_user.pending_requests_count > 0 %>
-            <i class="tmn-counts request-count">
+            <i class="tmn-counts request-count message-count">
               <%=current_user.pending_requests_count%>
             </i>
             <% end %>
@@ -98,8 +98,11 @@
             <li><%= link_to('Logout', destroy_user_session_path, :method => :delete) %></li>
           </ul>
         </li>
+        <li> <a href=""> </a></li>
+        <li> <a href=""> </a></li>
+        <li> <a href=""> </a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Sessions <span class="caret"></span></a>
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Published Coachings <span class="caret"></span></a>
           <ul class="dropdown-menu">
              <li><a href="/archived_messages">Archived</a></li>
             <li role="separator" class="divider"></li>
@@ -107,13 +110,15 @@
           </ul>
         </li>
         <% end %>
+        <li> <a href=""></a></li>
         <!-- <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li> -->
         <% if session[:user_id] or user_signed_in?%>
-        <li><a href="/messages">Messages</a></li>
+        <li><a href="/messages">Current Chats</a></li>
+        <li> <a href=""></a></li>
         <% if current_user.role == 'Coach'%>
         <li><a href="/requests">Requests</a></li>
         <% elsif current_user.role == 'Client'%>
-        <li><a href="/coaches">Coaches</a></li>
+        <li><a href="/coaches">Request Coaching</a></li>
         <% end %>
 
       </ul>
