--- a/app/views/messages/chatbox.html.erb
+++ b/app/views/messages/chatbox.html.erb
@@ -59,12 +59,13 @@
                                       <% end %>
                                       <div class="media-body">
                                           <div class="lv-title"><%=User.find(request.receiver_id).name%></div>
-                                          <div class="lv-small"><%=User.find(request.receiver_id).email%></div>
+                                          <div class="lv-small">
                                           <% if request.is_expired %>
                                             <div class="lv-small">Expired</div>
                                           <% else %>
                                             <div class="lv-small"><span data-countdown="<%=Time.parse((request.created_at + 10.minutes).to_s).strftime('%Y/%m/%d %H:%M:%S')%>"></span></div>
                                           <% end %>
+                                          </div>
                                           <span class="message-count<%=request.id%> message-count">
                                             <% if request.user_id == current_user.id %>
                                               <% if request.sender_unread_count > 0 %>
@@ -302,10 +303,13 @@
                 </div>
             </section>
 
-
+<div id="getting-started"></div>
+ <script type="text/javascript">
+   
+ </script>
 
       
-
+<script type="text/javascript" src="/assets/countdown.js"></script>
 <script type="text/javascript">
 function terminate_session(){
     $.ajax({
@@ -331,6 +335,11 @@ function terminate_session(){
     });
   }
 $(document).ready(function(){
+  $(".ms-user").countdown("2016/01/01", function(event) {
+     $(this).text(
+       event.strftime('%D days %H:%M:%S')
+     );
+   });
   $(".option-btns").click(function(e){
     e.preventDefault();
     console.log("dsdd");
@@ -448,7 +457,5 @@ $(".btn-title-save").click(function(){
         $(v).html("Expires in " + event.strftime(format));
       })
   });
-
-
-}); 
+});
 </script>
